--- a/web/WEB-INF/jsgoodpart/fade_dom.html
+++ b/web/WEB-INF/jsgoodpart/fade_dom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>fade</title>
 </head>
-<!--<script type="text/javascript" src='<s:url value="/lib/js/jquery-3.1.0.js"/>'></script>-->
+<script type="text/javascript" src='/js/jquery-3.1.0.js'></script>
 <script type="text/javascript">
 //注意javascript和html dom按顺序加载
 
@@ -25,12 +25,9 @@
     }
 
     //window.ready(fade(document.body));
-
 </script>
 <body>
-
-<p id="number">12345</p>
-
+    <p id="number">12345</p>
 </body>
 <script type="text/javascript">
 
