--- a/web/WEB-INF/jsgoodpart/fade_dom.html
+++ b/web/WEB-INF/jsgoodpart/fade_dom.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>fade</title>
 </head>
-<script type="text/javascript" src='/js/jquery-3.1.0.js'></script>
+<script type="text/javascript" src='../../../lib/js/jquery-3.1.0.js'></script>
 <script type="text/javascript">
 //注意javascript和html dom按顺序加载
-
+    $(function(){
+        alert('jquery');
+    });
     var fade = function(node){
-        debugger;
+        //debugger;
         var level = 1;
         var step = function(){
             var hex = level.toString(16);
