--- a/web/WEB-INF/jspractice/ajax_array.html
+++ b/web/WEB-INF/jspractice/ajax_array.html
@@ -4,6 +4,7 @@
 <head>
     <title>ajax传递数组到后台</title>
 </head>
+<script type="text/javascript" src='../../../lib/js/jquery-3.1.0.js'></script>
 <body>
 
 </body>
