--- a/web/WEB-INF/jspractice/ajax_array.html
+++ b/web/WEB-INF/jspractice/ajax_array.html
@@ -6,11 +6,11 @@
 </head>
 <script type="text/javascript" src='../../../lib/js/jquery-3.1.0.js'></script>
 <script type="text/javascript">
-    $.ajax({
-        type:"GET",
-        url:
-        data: $("#ajaxForm").serialize()
-    });
+//    $.ajax({
+//        type:"GET",
+//        url:
+//        data: $("#ajaxForm").serialize()
+//    });
 </script>
 <body>
 <form id="ajaxForm" action="">
@@ -18,7 +18,7 @@
     <table>
         <tr>
             <td>
-                <input name="ajaxList.id" value="1">
+                <label>中文ID</label><input name="ajaxList.id" value="1">
             </td>
         </tr>
         <tr>
