--- a/web/WEB-INF/jspractice/array_oper.html
+++ b/web/WEB-INF/jspractice/array_oper.html
@@ -4,7 +4,7 @@
 <head>
     <title>javascript操作数组</title>
 </head>
-<script type="text/javascript" src='../../../lib/js/jquery-3.1.0.js'></script>
+<script type="text/javascript" src='../../jslib/jquery-3.1.0.js'></script>
 <script type="text/javascript">
     var arr = [1,1,2,3,4,5];
     document.writeln("arr init: "+arr.toString());
