--- a/web/WEB-INF/jspractice/ajax_array.html
+++ b/web/WEB-INF/jspractice/ajax_array.html
@@ -4,7 +4,7 @@
 <head>
     <title>ajax传递数组到后台</title>
 </head>
-<script type="text/javascript" src='../../jslib/jquery-3.1.0.js'></script>
+<script type="text/javascript" src='../../commons/jqueryLib/jquery-3.1.0.js'></script>
 <script type="text/javascript">
 //    $.ajax({
 //        type:"GET",
