--- a/web/WEB-INF/jspractice/this_and_$(this).html
+++ b/web/WEB-INF/jspractice/this_and_$(this).html
@@ -23,7 +23,7 @@
 $this
 [input]
 thisVar
-<input type="text" value="haha">
+<input type="text" value="shiro.ini">
 $this.val()
 "hahahehe"
 thisVar.value
